Fixed post title alignment

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -86,7 +86,6 @@ nav li {
 	position: absolute;
 	top: 40px;
 	opacity: 1;
-	margin-left: 9.33333%;
 	transition: opacity ease 0.5s;
 	-webkit-transition: opacity ease 0.5s;
 	-moz-transition: opacity ease 0.5s;
